<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/weather_details_view_title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/layout_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weather_details_view_weather" />

        <TextView
        android:id="@+id/tv_sunrise_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weather_details_view_sunrise" />

        <TextView
        android:id="@+id/tv_sunset_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weather_details_view_sunset" />

        <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weather_details_view_temp" />

        <TextView
        android:id="@+id/tv_pressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weather_details_view_pressure" />

        <TextView
        android:id="@+id/tv_humidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weather_details_view_humidity" />

        <TextView
        android:id="@+id/tv_mini_temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weather_details_view_temp_min" />

        <TextView
        android:id="@+id/tv_max_temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weather_details_view_temp_max" />

    </LinearLayout>
</LinearLayout>
